Revert "Fix the execution of the unit tests"
This reverts commit 1b2def9b7f5d8f8feb520e6fdf3052f610be884e.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Mock server responses
       run: npm install nock
     - name: Run the unit tests
-      run: npm run test:unit:mocked
+      run: npm run test:unit
